--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 ul {
   padding: 0;
   list-style: none;
+  padding-left: 0 !important;
 }
 
 p {
@@ -58,6 +59,8 @@ input[type="number"] {
   top: 43px;
   font-size: 14px;
   box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .suggestions > li {
@@ -116,7 +119,7 @@ input[type="number"] {
 
 .numberOfEvents {
   width: 200px;
-  margin: 20px auto;
+  margin: 10px auto;
   text-align: center;
 }
 
