--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,35 @@ p {
   margin: 5px 0;
 }
 
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+}
+
+.CitySearch {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 0;
+  flex-shrink: 3;
+  flex-basis: 300px;
+}
+
+.city {
+  width: 100%;
+  margin: auto auto 0 0;
+  padding: 8px 6px 8px 10px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  line-height: 20px;
+  align-self: center;
+  height: 38px;
+}
+
+
 .display-none {
   display: none;
 }
@@ -37,18 +66,6 @@ input[type="number"] {
   height: 38px;
 }
 
-.city {
-  width: 250px;
-}
-
-.CitySearch {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 300px;
- /*  max-width: 300px; */
-  margin: auto;
-  position: relative;
-}
 
 .suggestions {
   width: 250px;
@@ -117,9 +134,29 @@ input[type="number"] {
 }
 
 .numberOfEvents {
-  width: 200px;
-  margin: 10px auto;
-  text-align: center;
+  max-width: 150px;
+  padding: 0;
+  text-align: end;
+  font-size: 14px;
+  margin-top: auto;
+}
+
+.number-label {
+  display: inline-block;
+  margin: 0;
+}
+
+.number-input {
+  line-height: 20px;
+  height: 38px;
+  max-width: 100px;
+  text-align: end;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  line-height: 38px;
+  margin-left: 6px;
 }
 
 .button-wrapper {
