--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   text-align: left;
   padding: 2% 5%;
 }
-#root {
-  background-color: #f4f5f6;
+body {
+  background-color: #f4f5f6 !important;
 }
 
 .App * {
