--- a/src/App.css
+++ b/src/App.css
@@ -317,6 +317,10 @@ tspan {
   left: -20px;
 }
 
+.filter {
+  margin-bottom: -16px;
+}
+
 .card-footer {
   background-color: rgba(0, 0, 0, 0) !important;
   border-top: 0 !important;
