--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ input[type='number'] {
   width: 100%;
   margin: 0;
   font-size: 16px;
-  text-align: left;
+  text-align: center;
 }
 
 .event {
