--- a/src/App.css
+++ b/src/App.css
@@ -98,26 +98,14 @@ input[type='number'] {
   background-color: #e8f2fe;
 }
 
-/* .Alert {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-} */
-
-/* .alert-centered {
-  justify-content: center;
-  align-items: center;
-} */
-
 .alerts {
-  width: 100%;
-  position: absolute;
-  z-index: 3;
-  align-self: flex-start;
-  margin: 0;
-  font-size: 12px;
-  text-align: left;
-  overflow: visible;
+  position: fixed;
+  left: 50%;
+  margin-top: -9px;
+  font-size: 14px;
+  width: 400px;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
 
 .alerts-number {
@@ -359,4 +347,8 @@ tspan {
 
 .chart-card {
   padding-left: 16px;
+}
+
+.accordion-button {
+  position: unset;
 }
