--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ input[type='number'] {
   margin: 0;
   top: 63px;
   font-size: 14px;
-  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.17);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -85,7 +85,7 @@ input[type='number'] {
 .suggestions > li {
   text-align: left;
   padding: 8px 6px 8px 10px;
-  background-color: #eee;
+  background-color: #fff;
   cursor: default;
 }
 
