--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,7 @@ input[type='number'] {
   border: 1px solid #ccc;
   border-radius: 4px;
   position: relative;
+  height: 200px !important;
 }
 
 .details-btn {
